unpackaged/main/default/objects/filegen__Entry_Detail_Record__c/filegen__Entry_Detail_Record__c.object-meta.xml
<CustomObject>
    <label>Entry Detail Record</label>
    <nameField>
        <displayFormat>EDR-{0000000000}</displayFormat>
        <label>Entry Detail Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entry Detail Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>