unpackaged/main/default/objects/filegen__Entry_Detail_Record__c/fields/filegen__Addenda_Record_Indicator__c.field-meta.xml
<CustomField>
    <fullName>filegen__Addenda_Record_Indicator__c</fullName>
    <label>Addenda  Record  Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>