unpackaged/main/default/objects/filegen__Entry_Detail_Record__c/fields/filegen__Amount__c.field-meta.xml
<CustomField>
    <fullName>filegen__Amount__c</fullName>
    <label>Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>