unpackaged/main/default/objects/filegen__Entry_Detail_Record__c/fields/filegen__Check_Digit__c.field-meta.xml
<CustomField>
    <fullName>filegen__Check_Digit__c</fullName>
    <label>Check Digit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>