unpackaged/main/default/objects/filegen__Entry_Detail_Record__c/fields/filegen__RDFI_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>filegen__RDFI_Account_Number__c</fullName>
    <label>RDFI Account  Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>