unpackaged/main/default/objects/filegen__Entry_Detail_Record__c/fields/filegen__RDFI_Identification__c.field-meta.xml
<CustomField>
    <fullName>filegen__RDFI_Identification__c</fullName>
    <label>RDFI  Identification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>