unpackaged/main/default/objects/filegen__Entry_Detail_Record__c/fields/filegen__Trace_Number__c.field-meta.xml
<CustomField>
    <fullName>filegen__Trace_Number__c</fullName>
    <label>Trace Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>