unpackaged/main/default/objects/filegen__Entry_Detail_Record__c/fields/filegen__Transaction_Code__c.field-meta.xml
<CustomField>
    <fullName>filegen__Transaction_Code__c</fullName>
    <label>Transaction  Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>